# Academic-Flow-API

./: README.md  README_En.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
backend/: main.py
backend/api/: alunos.py  amigos.py  atividades.py  auth.py  auth_admin.py  boca.py  data_materias.py  fluxograma.py  materias.py  professores.py
backend/config/: paths.py
backend/core/: amigo_core.py  config.py  database.py  grafo.py  lazy_loader.py  regras.py  security.py
backend/data/: generate_data.py  materias_data.py  seed.py
backend/data_store/db/: academic_flow.db
backend/data_store/parquet/: materias.parquet  prerequisitos.parquet
backend/models/: aluno_materia.py  amigo.py  comentario_materia.py  dificuldade_materia.py  fazendo_materia.py  nota_materia.py  refresh_token.py  return_schemas.py  schemas.py  user.py
backend/tests/: test_alunos.py  test_fluxograma.py
